<?xml version="1.0"?>
<package format="2">
  <name>vkr_sim</name>
  <version>1.4.0</version>
  <description>This package for simulation vkr</description>
  <maintainer email="some@some.com">Some Some</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>


  <depend>ur_e_description</depend>
  <depend>gazebo_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>orocos-kdl</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>


</package>
